# african-commodity-markets

./: .agent.md  .env.example  .gitignore  A2A_MARKETPLACE_README.md  AGENTS.md  Anchor.toml  BRIDGE_DEPLOYMENT_COMPLETE.md  BRIDGE_DEPLOYMENT_STATUS.md  BRIDGE_FIXED_FOR_PLAYGROUND.md  BRIDGE_INTEGRATION_SUMMARY.md  BRIDGE_REORGANIZATION_COMPLETE.md  BUILD_FIXED_SUMMARY.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DAILY_INSIGHTS_QUICKSTART.md  DEPLOYMENT_RESULTS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_OCT_2025.md  DEPLOYMENT_SUMMARY.md  DEPLOY_ORACLE_SEPARATELY.md  FHE_DEPLOYMENT_GUIDE.md  FHE_IMPLEMENTATION_COMPLETE.md  FHE_PRICING_GUIDE.md  FHE_QUICK_REFERENCE.md  FIXES_COMPLETE.md  GET_TEST_USDC.md  IMPLEMENTATION_SUMMARY.md  KALSHI_REDESIGN_COMPLETE.md  MULTI_ROLE_SYSTEM_COMPLETE.md  ONE_PAGER.md  ORACLE_PROGRAM_STANDALONE.rs  PLAYGROUND_Cargo.toml  PLAYGROUND_QUICK_FIX.md  PREDICTION_API_README.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_IMPLEMENTATION.md  SETUP_COMPLETE.md  (+32 more)
abis/: CommodityPoR.json
afrifutures/: package.json  pnpm-lock.yaml
afrifutures/programs/prediction-market/: Cargo.toml
afrifutures/programs/prediction-market/src/: lib.rs
afrifutures/programs/wormhole-bridge/: Cargo.toml
afrifutures/programs/wormhole-bridge/src/: lib-simplified.rs  lib.rs
app/: globals.css  layout.tsx  page.tsx
cache_hardhat/: solidity-files-cache.json
components/: ProofUploader.tsx  TradeIntroModal.tsx  app-header.tsx  auth-provider.tsx  contact-footer.tsx  home-inline-trade.tsx  market-health-indicator.tsx  market-timing-widget.tsx  role-switcher.tsx  trading-modal.tsx  unified-wallet-connect.tsx  user-profile-provider.tsx  user-type-provider.tsx  wallet-connect.tsx  whatsapp-demo.tsx  wormhole-bridge-modal.tsx
contracts/: AFFToken.sol  AIPredictionMarket.sol  AfrifuturesBridge.sol  AgentRegistry.sol  CommodityEscrow.sol  CommodityPoR.sol  CommodityPool.sol  CommodityPriceOracle.sol  EncryptedCommodityPriceOracle.sol  MockBridge.sol  PredictionMarketFactory.sol  PriceEncryptionHelper.sol
deployments/: bridge-deployment.json  mock-addresses.json  solana-bridge-deployment.json
docs/: A2A_MARKETPLACE.md  A2A_PROTOCOL.md  AGENT_COMPLETE.md  AGENT_IMPLEMENTATION.md  API_SUCCESS.md  AUTOMATION_SETUP.md  BLOCKCHAIN_INTEGRATION.md  BRIDGE_DEPLOYMENT.md  BRIDGE_TESTING_GUIDE.md  DATA_SOURCES_AND_ROADMAP.md  DEPLOY_VIA_PLAYGROUND.md  FHE_PRIVACY.md  IMPLEMENTATION_SUMMARY.md  MARKET_SEEDING_GUIDE.md  MULTICHAIN_IMPLEMENTATION.md  MULTICHAIN_ROADMAP.md  NEW_FEATURES.md  ONCHAIN_QUICKSTART.md  PG_PRESSURE_TEST.md  REAL_DATA_SETUP.md  ROADMAP.md  ROADMAP_UPDATED_2025.md  ROADMAP_V2.md  SOLANA_BRIDGE_DEPLOYMENT_GUIDE.md  SOLANA_DEPLOYMENT.md  UI_CONSISTENCY.md  UX_ARCHITECTURE.md  WEEK_1_QUICKSTART.md  WHATSAPP_INTEGRATION.md  WHITEPAPER_ALIGNMENT.md  WORMHOLE_BRIDGE_GUIDE.md  WORMHOLE_FLOW_DIAGRAM.md  WORMHOLE_IMPLEMENTATION_SUMMARY.md  elizaos-groq-integration.md
hooks/: useAuth.ts  useMarkets.ts  useStats.ts
lib/: api.ts  chainlink.ts  cooperative-service.ts  intelligence-layer.ts  live-prices.ts  risk-analytics.ts  sosovalue-integration.ts
native-programs/oracle/: Cargo.toml
native-programs/oracle/src/: lib.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
scripts/: check-all-balances.js  check-balance.js  check-deployer.js  check-existing.js  check-key-address.js  check-status.sh  deploy-base.js  deploy-bridge.js  deploy-bridge.ts  deploy-mock-bridge.js  deploy-prediction-market.js  deploy-prediction-market.ts  deploy-solana-bridge.sh  deploy-solana.sh  deploy-streamlined.ts  fix-deploy.js  fix-imports.js  fix-user-profile.js  (+12 more)
sdk/python/: README.md  pyproject.toml
sdk/python/afrifutures_a2a/: __init__.py  client.py  exceptions.py  models.py
sdk/python/examples/: usage.py
sdk/python/tests/: test_a2a.py
(+180 files in other folders)
