[package]
name = "oracle"
version = "0.1.0"
description = "Commodity price oracle for Afrifutures"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
