[package]
name = "prediction-market"
version = "0.1.0"
description = "Prediction market with oracle settlement for Afrifutures"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
