[package]
name = "afrifutures-bridge"
version = "0.1.0"
description = "Afrifutures Wormhole Bridge for cross-chain USDC and AFF token transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "afrifutures_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
wormhole-anchor-sdk = "0.30.1-alpha.3"
